--- a/configs/sst_kernel_rats-setup.yaml
+++ b/configs/sst_kernel_rats-setup.yaml
@@ -4,12 +4,11 @@ data:
   name: realtime-setup
   description: Package that creates realtime group and limits
   maintainer: sst_kernel_rats
-  packages: []
   labels:
   - eln
   - c9s
 
-  package_placeholders:
+  packages:
     realtime-setup:
       srpm: realtime-setup
       description: This package is not in Fedora (yet), but we want it here.
